# QrAi

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.tls.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/workflows/: ci.yml  docker-build.yml  mobile.yml
.pnpm-store/v11/: index.db-shm  index.db-wal
UnpredectableGAME/: package-lock.json
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: Dockerfile  README.md  index.html  nginx-tls.conf  nginx.conf  package.json  tsconfig.json
docs/: 10-10-true-implementation-plan.md  BACKUP_RESTORE.md  DATA_INVENTORY.md  DATA_LICENSES.md  DECISIONS.md  ROAD_TO_1_TASKS.md  SCHOLAR_REVIEW.md  SHIP_PLAN.md  SHIP_READINESS.md  STAGING_RUNBOOK.md  TESTING.md  pilot-report-2026-06-28.md
docs/architecture/: 10-10-platform.md
docs/proof/: 10-10-proof-checklist.md  baseline-2026-06-24-live-recitation.md  baseline-2026-06-24.md
docs/readiness/: CANONICAL_INTEGRITY_AUDIT.md  INVENTORIES.md  OPERATIONS.md  README.md  SIGNOFF_REGISTER.md  THREAT_MODEL.md  TRUE_READINESS.md
infra/canonical/: fatihah.json
infra/sql/: 0001_core_schema.sql  0002_seed_fatihah.sql  0003_tenant_rls.sql  0004_add_password_hash.sql  (+19 more)
monitoring/: README.md  alerts.yml  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
scripts/: backup-db.sh  chaos-realtime-reconnect.mjs  check-security-headers.mjs  check-web-bundle-secrets.mjs  evaluate-model.mjs  gen-dev-tls-cert.sh  gen-production-secrets.sh  guard-pretooluse.sh  load-test.js  privacy-audit-run.mjs  proof.sh  reconcile-quran-data.mjs  recreate-staging.sh  release-build-evidence.mjs  release-build-evidence.test.mjs  release-challenge.mjs  release-evidence-summary.mjs  release-evidence-summary.test.mjs  release-manifest.mjs  release-manifest.test.mjs  smoke-a11y.mjs  smoke-all.mjs  smoke-api.mjs  smoke-browser.mjs  smoke-database.mjs  smoke-database.test.mjs  smoke-e2e.mjs  smoke-evidence.mjs  smoke-evidence.test.mjs  smoke-gateway.mjs  smoke-ml.mjs  smoke-privacy.mjs  smoke-sql.mjs  update-ledger.sh  verify.sh
services/asr-inference/: Dockerfile  audio_guards.py  forced_align.py  forced_align_arabic.py  forced_align_poc.py  pyproject.toml  requirements.lock.txt  server.py  test_audio_guards.py
services/platform-api/: Cargo.toml  Dockerfile  README.md
services/platform-api/.cargo/: audit.toml
services/platform-api/src/: auth.rs  lib.rs  main.rs  metrics.rs  types.rs
services/platform-api/src/handlers/: agent.rs  audit.rs  auth.rs  eval.rs  ml_proxy.rs  mod.rs  pilot.rs  privacy.rs  progress.rs  quran.rs  recitation.rs  review.rs  user.rs
services/platform-api/tests/: integration.rs
services/realtime-gateway/: Cargo.toml  Dockerfile
services/realtime-gateway/src/: lib.rs  lib.rs.backup  main.rs
specs/: constitution.md
(+290 files in other folders)
