[project]
name = "quran-ai-asr-inference"
version = "0.1.0"
description = "Quranic Arabic ASR service (tarteel-ai/whisper-base-ar-quran via transformers, Whisper fallback)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai-whisper>=20240930",
    "torchaudio",
    "transformers>=4.40",
    "soundfile>=0.12",
]
