[package]
name = "quran-ai-platform-api"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.9"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower_governor = "0.7"
uuid = { version = "1.19.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bcrypt = "0.17"
argon2 = "0.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
quran-ai-shared-ticket = { path = "../shared-ticket" }

