[package]
name = "quran-ai-realtime-gateway"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.32", features = ["tokio-comp"] }
