[package]
name = "quran-ai-realtime-gateway"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
tower_governor = "0.7"
quran-ai-shared-ticket = { path = "../shared-ticket" }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
